--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="navstyles.css">
+   <link rel="stylesheet" href="footer.css">
 
   <style>
   
@@ -95,7 +98,29 @@
   
 </head>
 <body>
+ <header class="navbar">
+  <div class="logo">
+    <a href="home.html">
+      <img src="assets/logo.png" alt="SafeMediDisposal Logo" />
+    </a>
+  </div>
 
+  <div class="menu-toggle" id="menu-toggle">
+    <i class="fas fa-bars"></i>
+  </div>
+
+  <nav class="nav-links" id="nav-links">
+    <a href="home.html" class="active">HOME</a>
+    <a href="#">SERVICES</a>
+    <a href="#">ABOUT US</a>
+    <a href="#">CONTACT US</a>
+  </nav>
+
+  <div class="icons">
+    <a href="#"><i class="fas fa-search"></i></a>
+    <a href="#" id="profile-link"><i class="fas fa-user"></i></a>
+  </div>
+</header>
 <section class="body-section">
   <div class="text">
     <h1>Transform Waste Into Wellness. Join SafeMediDisposal.</h1>
@@ -240,6 +265,47 @@
         </div>
     </section>
 
+    <footer>
+        <img class="logo" src="assets/whitelogo-Photoroom.jpg" alt="SafeMediDisposal White logo">
+        <div class="container">
+        <div class="about">
+            <h3>About SafeMediDisposal</h3>
+            <p>Welcome to SafeMediDisposal, your partner in fostering a cleaner and healthier environment. Our mission
+                is to empower individuals and communities to manage medical waste responsibly, transforming disposal
+                into an impactful and rewarding process.</p>
+                <div class="socials">
+                   <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                   <i class="fa-brands fa-square-facebook"></i>
+                   <i class="fa-brands fa-linkedin"></i>
+                </div>
+        </div>
+        <div class="explore">
+            <h3>Explore</h3>
+            <ul>
+                <li>HOME</li>
+                <li>SERVICES</li>
+                <li>ABOUT US</li>
+                <li>CONTACT US</li>
+            </ul>
+        </div>
+        <div class="support">
+            <h3>Customer Support</h3>
+            <p>Have questions or need assistance? Our dedicated customer service team is here to help. Contact us:</p>
+            <div class="phone"><b>Phone</b>:  0645678923</div>
+            <br>
+            <div class="mail"><b>Email</b>:  SafeMediDisposal@gmail.com</div>
+        </div>
+        </div>
+       <div class="rights-reserved" id="copyright">
+  SafeMediDisposal © <span id="year"></span> SafeMediDisposal. All rights reserved.
+</div>
+<!-- Scroll to top button -->
+<button id="scrollToTopBtn" title="Back to top">↑</button>
+        
+    </footer>
     <script src="auth.js"></script>
+    <script src="navbar.js"></script>
+    <script src="footer.js"></script>
+
 </body>
 </html>
