--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
 }
 
 .custom-btn:hover {
-  background-color: #3A9FA5; 
+  background-color: #3A9FA5; }
 
 .features-glance-container {
     max-width: 1100px; 
