linked navbar at home.html

--- a/home.html
+++ b/home.html
@@ -111,14 +111,14 @@
 
   <nav class="nav-links" id="nav-links">
     <a href="home.html" class="active">HOME</a>
-    <a href="#">SERVICES</a>
-    <a href="#">ABOUT US</a>
-    <a href="#">CONTACT US</a>
+    <a href="services.html">SERVICES</a>
+    <a href="aboutus.html">ABOUT US</a>
+    <a href="contactus.html">CONTACT US</a>
   </nav>
 
   <div class="icons">
     <a href="#"><i class="fas fa-search"></i></a>
-    <a href="#" id="profile-link"><i class="fas fa-user"></i></a>
+    <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
   </div>
 </header>
 <section class="body-section">
