--- a/home.html
+++ b/home.html
@@ -198,7 +198,7 @@
                         <h5 class="card-title"><b>Easy Waste Deposit</b></h5>
                         <p class="card-text">Seamlessly dispose of your medical waste directly through the app or website. Find collection points or arrange a convenient pickup.</p>
                         <p><b>Start Disposal</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                         <h5 class="card-title"><b>Earn Points for Every Disposal</b></h5>
                         <p class="card-text">Contribute to a cleaner environment and earn valuable points with every responsible medical waste deposit. Watch your rewards grow!</p>
                         <p><b>View Points System</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -222,7 +222,7 @@
                         <h5 class="card-title"><b>Redeem Your Rewards</b></h5>
                         <p class="card-text">Exchange your earned points for valuable rewards, cash equivalents via e-wallet, or exclusive benefits. Your efforts truly pay off!</p>
                         <p><b>Redeem Points</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                         <h5 class="card-title"><b>Track Your Disposal History</b></h5>
                         <p class="card-text">Keep a detailed record of all your waste disposals and points earned. Transparency in your contributions to a greener world.</p>
                         <p><b>View History</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                         <h5 class="card-title"><b>Latest News & Updates</b></h5>
                         <p class="card-text">Stay informed on environmental initiatives, SafeMediDisposal campaigns, and important updates. Be part of our growing community!</p>
                         <p><b>View All Articles</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="news.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -258,7 +258,7 @@
                         <h5 class="card-title"><b>Smart Waste Scan</b></h5>
                         <p class="card-text">Use our smart Waste Scan to instantly identify your medical waste and view disposal tips with estimated points—before you deposit!</p>
                         <p><b>Scan Now</b></p>
-                        <a href="#" class="btn custom-btn">Get Started</a>
+                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
