--- a/campaign.html
+++ b/campaign.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="icons">
       <a href="#"><i class="fas fa-search"></i></a>
-      <a href="#" id="profile-link"><i class="fas fa-user"></i></a>
+      <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
     </div>
   </header>
 
