--- a/campaign.html
+++ b/campaign.html
@@ -137,5 +137,7 @@
         
     </footer>
     <script src="auth.js"></script>
+    <script src="navbar.js"></script>
+    <script src="footer.js"></script>
 </body>
 </html>
