--- a/news.html
+++ b/news.html
@@ -94,6 +94,8 @@
         <div class="rights-reserved">SafeMediDisposal © 2025 SafeMediDisposal. All rights reserved.</div>
         
     </footer>
-    <script src="auth.js"></script>
+  <script src="auth.js"></script>
+  <script src="navbar.js"></script>
+  <script src="footer.js"></script>
 </body>
 </html>
