--- a/services.html
+++ b/services.html
@@ -295,6 +295,8 @@
         
     </footer>
     <script src="auth.js"></script>
+  <script src="navbar.js"></script>
+    <script src="footer.js"></script>
 
 </body>
 </html>
