--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@
                         <h5 class="card-title"><b>Smart Waste Scan</b></h5>
                         <p class="card-text">Use our smart Waste Scan to instantly identify your medical waste and view disposal tips with estimated points—before you deposit!</p>
                         <p><b>Scan Now</b></p>
-                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
+                        <a href="qrcodescanner.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
