--- a/qrcodescanner.html
+++ b/qrcodescanner.html
@@ -109,7 +109,7 @@ input[type="file"]::file-selector-button:hover {
   </div>
 
   <nav class="nav-links" id="nav-links">
-    <a href="home.html" class="active">HOME</a>
+    <a href="home.html" >HOME</a>
     <a href="services.html">SERVICES</a>
     <a href="aboutus.html">ABOUT US</a>
     <a href="contactus.html">CONTACT US</a>
