--- a/services.html
+++ b/services.html
@@ -217,7 +217,7 @@
                         <h5 class="card-title"><b>Smart Waste Scan</b></h5>
                         <p class="card-text">Use our smart Waste Scan to instantly identify your medical waste and view disposal tips with estimated points—before you deposit!</p>
                         <p><b>Scan Now</b></p>
-                        <a href="home.html#impact-content" class="btn custom-btn">Get Started</a>
+                        <a href="qrcodescanner.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                         <h5 class="card-title"><b>RFID-Enabled Tracking</b></h5>
                         <p class="card-text">Enjoy secure, hassle-free disposal with our RFID system—every deposit is tracked for full transparency and accountability.</p>
                         <p><b>Track Your Waste</b></p>
-                        <a href="home.html#impact-content" class="btn custom-btn">Get Started</a>
+                        <a href="qrcodescanner.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
