--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
   <h3>Latest News & Updates:</h3>
 
   <!-- News Card 1 -->
-  <a href="https://www.esgtimes.in/circularity/waste-management/india-unveils-1st-indigenous-automated-biomedical-waste-treatment-plant/" target="_blank" class="news-card">
+  <a href="https://www.esgtimes.in/circularity/waste-management/india-unveils-1st-indigenous-automated-biomedical-waste-treatment-plant/" target="_blank" rel="noopener noreferrer" class="news-card">
     <img src="assets/jitenderji.jpeg" alt="Dr. Jitendra Singh">
     <div class="news-content">
       <h4>India Unveils 1st Indigenous Automated Biomedical Waste Treatment Plant</h4>
@@ -47,7 +47,7 @@
   </a>
 
   <!-- News Card 2 -->
-  <a href="https://www.hindustantimes.com/india-news/india-stares-at-biomedical-waste-crisis/story-SpPZrA1tutAAuYhE57p7UI.html" target="_blank" class="news-card">
+  <a href="https://www.hindustantimes.com/india-news/india-stares-at-biomedical-waste-crisis/story-SpPZrA1tutAAuYhE57p7UI.html" target="_blank" rel="noopener noreferrer" class="news-card">
     <img src="assets/wastefield.avif" alt="India's Biomedical Waste Crisis">
     <div class="news-content">
       <h4>India stares at Biomedical waste crisis</h4>
