--- a/home.html
+++ b/home.html
@@ -105,10 +105,6 @@
     </a>
   </div>
 
-  <div class="menu-toggle" id="menu-toggle">
-    <i class="fas fa-bars"></i>
-  </div>
-
   <nav class="nav-links" id="nav-links">
     <a href="home.html" class="active">HOME</a>
     <a href="services.html">SERVICES</a>
@@ -117,6 +113,9 @@
   </nav>
 
   <div class="icons">
+    <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
     <a href="#"><i class="fas fa-search"></i></a>
     <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
   </div>
@@ -205,12 +204,12 @@
 
             <div class="col-lg-4 col-sm-6">
                 <div class="card mx-auto" style="text-align: center;">
-                    <img src="assets/points.jpeg" class="card-img-top" alt="...">
+                    <img src="assets/RFID.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title"><b>Earn Points for Every Disposal</b></h5>
-                        <p class="card-text">Contribute to a cleaner environment and earn valuable points with every responsible medical waste deposit. Watch your rewards grow!</p>
-                        <p><b>View Points System</b></p>
-                        <a href="#impact-content" class="btn custom-btn">Get Started</a>
+                        <h5 class="card-title"><b>RFID-Enabled Tracking</b></h5>
+                        <p class="card-text">Enjoy secure, hassle-free disposal with our RFID system—every deposit is tracked for full transparency and accountability.</p>
+                        <p><b>Track Your Waste</b></p>
+                        <a href="qrcodescanner.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
