--- a/aboutus.html
+++ b/aboutus.html
@@ -29,8 +29,11 @@
       <a href="contactus.html">CONTACT US</a>
     </nav>
     <div class="icons">
+      <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
       <a href="#"><i class="fas fa-search"></i></a>
-      <a href="#" id="profile-link"><i class="fas fa-user"></i></a>
+      <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
     </div>
   </header>
 
@@ -111,7 +114,6 @@
         <div class="rights-reserved">SafeMediDisposal © 2025 SafeMediDisposal. All rights reserved.</div>
         
     </footer>
-  <script src="auth.js"></script>
   <script src="navbar.js"></script>
   <script src="footer.js"></script>
 </body>
