--- a/campaign.html
+++ b/campaign.html
@@ -4,26 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Campaigns</title>
-  <link rel="stylesheet" href="navstyles.css">
-  <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="campaignstyles.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <style>
-.custom-btn {
-  background-color: #50C2C9; 
-  color: white;
-  border-radius: 10px;
-}
+  <link rel="stylesheet" href="campaignstyles.css">
+  <link rel="stylesheet" href="navstyles.css">
+  <link rel="stylesheet" href="footer.css">
+  
 
-.custom-btn:hover {
-  background-color: #3A9FA5; 
-}
-  </style>
 </head>
 <body>
   <header class="navbar">
@@ -39,6 +30,9 @@
       <a href="contactus.html">CONTACT US</a>
     </nav>
     <div class="icons">
+      <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
       <a href="#"><i class="fas fa-search"></i></a>
       <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
     </div>
@@ -64,7 +58,7 @@
   <h3 class="ongoing-heading" id="ongoing-campaigns">Ongoing Campaigns:</h3>
 
 <!-- Campaign Cards-->
-    <section id="services" class=""px-5 px-3>
+    <section id="services" class="px-5 px-3">
         <div class="row">
             <div class="col-lg-4 col-sm-6">
                 <div class="card mx-auto" style="text-align: center;">
