--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
   <title>SafeMediDisposal</title>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheet/styles.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 
   <style>
   
@@ -27,12 +27,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
     margin-bottom: 90px;
-}
-
-.img-container {
-    overflow: hidden;
-    height: 264px;
-    width: 341px; 
 }
 
 #services .card:hover {
@@ -60,31 +54,6 @@
 
 .custom-btn:hover {
   background-color: #3A9FA5; /* darker shade on hover */
-}
-
-.text {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.text h1 {
-  font-family: 'Fraunces';
-  padding-top: 40px;
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 1.3;
-  margin-bottom: 20px;
-  color: #2E3A59;
-  text-align: center;
-}
-
-.text p {
-  font-size: 24px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-  color: #1a1a1a;
-  text-align: center;
 }
 
 .features-glance-container {
@@ -132,14 +101,17 @@
       <a href="contactus.html">CONTACT US</a>
     </nav>
     <div class="icons">
+        <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
       <a href="#"><i class="fas fa-search"></i></a>
-      <a href="#" id="profile-link"><i class="fas fa-user"></i></a>
+      <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
     </div>
   </header>
 
     <div class="text">
       <h1>Welcome to SafeMediDisposal Services</h1>
-      <p style="padding-top: 30px; padding-bottom: 120px;">
+      <p class="intro-text">
         Explore the comprehensive services offered by SafeMediDisposal, designed to make medical waste management safe, simple, and rewarding. From easy disposal methods to earning valuable points, we provide the tools you need to contribute to a cleaner, healthier environment.
       </p>
     </div>
@@ -294,8 +266,8 @@
         <div class="rights-reserved">SafeMediDisposal © 2025 SafeMediDisposal. All rights reserved.</div>
         
     </footer>
-  <script src="navbar.js"></script>
-  <script src="footer.js"></script>
+    <script src="navbar.js"></script>
+    <script src="footer.js"></script>
 
 </body>
 </html>
