--- a/news.html
+++ b/news.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News</title>
-  <link rel="stylesheet" href="navstyles.css">
-  <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="newsstyles.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <link rel="stylesheet" href="navstyles.css">
+  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="newsstyles.css">
 </head>
 
 <body>
@@ -27,6 +28,9 @@
       <a href="contactus.html">CONTACT US</a>
     </nav>
     <div class="icons">
+      <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
       <a href="#"><i class="fas fa-search"></i></a>
       <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
     </div>
@@ -93,7 +97,7 @@
         </div>
         <div class="rights-reserved">SafeMediDisposal © 2025 SafeMediDisposal. All rights reserved.</div>
         
-  </footer>
+    </footer>
   <script src="navbar.js"></script>
   <script src="footer.js"></script>
 </body>
