--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
   <title>SafeMediDisposal</title>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="services.css"/>
 
   <style>
   
