--- a/services.html
+++ b/services.html
@@ -141,7 +141,7 @@
                         <h5 class="card-title"><b>Earn Points for Every Disposal</b></h5>
                         <p class="card-text">Contribute to a cleaner environment and earn valuable points with every responsible medical waste deposit. Watch your rewards grow!</p>
                         <p><b>View Points System</b></p>
-                        <a href="home.html#impact-content" class="btn custom-btn">Get Started</a>
+                        <a href="redemption.html" class="btn custom-btn">Get Started</a>
                     </div>
                 </div>
             </div>
