--- a/profile.html
+++ b/profile.html
@@ -23,9 +23,12 @@
       <a href="aboutus.html">ABOUT US</a>
       <a href="contactus.html">CONTACT US</a>
     </nav>
-    <div class="icons">
+     <div class="icons">
+      <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
       <a href="#"><i class="fas fa-search"></i></a>
-      <a href="profile.html"><i class="fas fa-user" style="color: #50C2C9;"></i></a>
+      <a href="profile.html" id="profile-link"><i class="fas fa-user" style="color: #50C2C9;"></i></a>
     </div>
   </header>
 
