--- a/qrcodescanner.html
+++ b/qrcodescanner.html
@@ -12,87 +12,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="qrcodescanner.css">
    <link rel="stylesheet" href="navstyles.css">
    <link rel="stylesheet" href="footer.css">
-   <link rel="stylesheet" href="body.css" />
-
-    <script src="https://unpkg.com/html5-qrcode"></script>
-    <style> 
-      body {
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
-  background-color: #fff;
-  color: #2E3A59;
-}
-
-h2 {
-  margin-bottom: 20px;
-  color: #2E3A59;
-  font-weight: 600;
-}
-
-input[type="file"] {
-  margin: 20px auto;
-  padding: 10px;
-  border: 2px dotted #50C2C9;
-  border-radius: 10px;
-  background-color: #E9F8F9;
-  color: #2E3A59;
-  cursor: pointer;
-}
-
-input[type="file"]::file-selector-button {
-  background-color: #50C2C9;
-  color: white;
-  border: none;
-  padding: 8px 15px;
-  border-radius: 8px;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-input[type="file"]::file-selector-button:hover {
-  background-color: #3A9FA5;
-}
-
-#reader {
-  width: 300px;
-  margin: 30px auto 20px;
-}
-
-#result {
-  font-weight: bold;
-  color: #2E3A59;
-  font-size: 18px;
-  margin-bottom: 40px;
-}
-
-#result a {
-  color: #0077cc;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-#result a:hover {
-  text-decoration: underline;
-}
-
-.btn-back {
-  margin-top: 30px;
-  background-color: #50C2C9;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
-  text-decoration: none;
-}
-
-.btn-back:hover {
-  background-color: #3A9FA5;
-}
-
- </style>
-
+   
+<script src="https://unpkg.com/html5-qrcode"></script>
+  
 </head>
 <body>
 
@@ -103,18 +29,17 @@ input[type="file"]::file-selector-button:hover {
     </a>
   </div>
 
-  <div class="menu-toggle" id="menu-toggle">
-    <i class="fas fa-bars"></i>
-  </div>
-
   <nav class="nav-links" id="nav-links">
-    <a href="home.html" >HOME</a>
+    <a href="home.html">HOME</a>
     <a href="services.html">SERVICES</a>
     <a href="aboutus.html">ABOUT US</a>
     <a href="contactus.html">CONTACT US</a>
   </nav>
 
   <div class="icons">
+    <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
     <a href="#"><i class="fas fa-search"></i></a>
     <a href="profile.html" id="profile-link"><i class="fas fa-user"></i></a>
   </div>
@@ -126,7 +51,7 @@ input[type="file"]::file-selector-button:hover {
   <div id="result">Scanned QR Code will appear here</div>
 
 
-<footer>
+  <footer>
         <img class="logo" src="assets/whitelogo-Photoroom.jpg" alt="SafeMediDisposal White logo">
         <div class="container">
         <div class="about">
@@ -157,11 +82,8 @@ input[type="file"]::file-selector-button:hover {
             <div class="mail"><b>Email</b>:  SafeMediDisposal@gmail.com</div>
         </div>
         </div>
-       <div class="rights-reserved" id="copyright">
-  SafeMediDisposal © <span id="year"></span> SafeMediDisposal. All rights reserved.
-</div>
-<!-- Scroll to top button -->
-<button id="scrollToTopBtn" title="Back to top">↑</button>
+        <div class="rights-reserved">SafeMediDisposal © 2025 SafeMediDisposal. All rights reserved.</div>
+        
     </footer>
 
     <script src="navbar.js"></script>
