--- a/home.html
+++ b/home.html
@@ -106,8 +106,8 @@
   </div>
 
   <nav class="nav-links">
-    <a href="home.html">HOME</a>
-    <a href="services.html" class="active">SERVICES</a>
+    <a href="home.html" class="active">HOME</a>
+    <a href="services.html">SERVICES</a>
     <a href="aboutus.html">ABOUT US</a>
     <a href="contactus.html">CONTACT US</a>
   </nav>
