--- a/campaign.html
+++ b/campaign.html
@@ -24,7 +24,7 @@
   </div>
 
   <nav class="nav-links">
-    <a href="home.html" class="active">HOME</a>
+    <a href="home.html">HOME</a>
     <a href="services.html" >SERVICES</a>
     <a href="aboutus.html">ABOUT US</a>
     <a href="contactus.html">CONTACT US</a>
