--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
 
-            <div id="news-update" class="col-lg-4 col-sm-6">
+            <div id="news-updates" class="col-lg-4 col-sm-6">
                 <div class="card mx-auto" style="text-align: center;">
                     <img src="assets/news.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
