--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="navstyles.css" />
   <link rel="stylesheet" href="profile.css" />
 </head>
@@ -38,7 +38,7 @@
 
     <!-- Profile icon -->
     <a href="profile.html" id="profile-link" class="profile-icon">
-      <i class="fas fa-user"></i>
+      <i class="fas fa-user" style="color: #50C2C9;"></i>
     </a>
   </div>
 </header>
