--- a/detection2.html
+++ b/detection2.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="detection.css">
+  <link rel="stylesheet" href="detection2.css">
   <link rel="stylesheet" href="navstyles.css">
   <link rel="stylesheet" href="footer.css">
 
@@ -149,7 +149,7 @@
         
     </footer>
 
-  <script src="detection.js"> </script>
+  <script src="detection2.js"> </script>
   <script src="navbar.js"></script>
   <script src="footer.js"></script>
   <script src="search.js"></script>
