--- a/detection2.html
+++ b/detection2.html
@@ -106,7 +106,7 @@
   </section>
 
   <div>
-    <a href="gamification.html" class="gamification-button-wrapper">
+    <a href="gamification2.html" class="gamification-button-wrapper">
       <button>
         🎮 View Gamification Results
       </button>
